# HomeWork_14.1

./: README.md  main.py  pyproject.toml
htmlcov/: index.html
src/: category.py  category.y.py  print_mixinlog.py  product.py  product_iterator.py  utils.py
tests/: conftest.py  test_category.py  test_middle_prise_category.py  test_product.py  test_products.json  test_utils.py  tests_print_mixin.py  tests_raise_product.py
