[tool.poetry]
name = "homework-14-1"
version = "0.1.0"
description = ""
authors = ["Al Pogorelov <eczemplrez@gmail.com>"]
readme = "README.md"
packages = [{include = "homework_14"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
